service.yaml
service.yaml

apiVersion: v1
kind: Service
metadata:
  name: myapp-myapp-chart
  namespace: default
  labels:
    app.kubernetes.io/managed-by: Helm
  annotations:
    meta.helm.sh/release-name: myapp
    meta.helm.sh/release-namespace: default
spec:
  type: LoadBalancer
  selector:
    app: myapp
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: https
      port: 443
      targetPort: 8443
      protocol: TCP
